Fixed flickering on mobile scrolling

--- a/simple/styles.less
+++ b/simple/styles.less
@@ -27,7 +27,7 @@ section {
         box-shadow: inset 0px -1em 1em rgba(0,0,0,0.2);
         padding-top: 1em;
         text-shadow: 0px 0px 8px rgba(0,0,0,0.6);
-        z-index: 1;
+        z-index: -1;
 
 
         /////////////
